<?xml version="1.0" encoding="utf-8"?>
<package>
  <name>ethz_apriltag2</name>
  <description>ethz_apriltag2</description>
  <version>0.0.1</version>
  <maintainer email="paulfurgale@mavt.ethz.ch">Paul Furgale</maintainer>
  <author>Paul Furgale</author>
  <license>New BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>eigen</build_depend>
  <build_depend>libopencv-dev</build_depend>
  <build_depend>libv4l-dev</build_depend>
  <run_depend>rosbag</run_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>sensor_msgs</run_depend>
  <build_depend>cv_bridge</build_depend>
  <run_depend>cv_bridge</run_depend>
  <build_depend>image_transport</build_depend>
  <run_depend>image_transport</run_depend>
</package>
